# python-project-template

./: .clineignore  .clinerules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Justfile  README.md  pyproject.toml  uv.toml  zensical.toml
.agents/roles/: 01-orchestrator.md  02-architect.md  03-engineer.md  04-qa-automator.md
.agents/rules/: 00-agentic-framework.md
.agents/workflows/: complex-feature.md  implement.md
.github/workflows/: ci.yml  container.yml  docs.yml  release.yml
app/core/: config.py
docs/: api_reference.md  index.md
scripts/: validate_okf.py
tests/: conftest.py
tests/unit/: test_config.py
