[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-template"
version = "0.1.0"
description = "Agent-first Python project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "zensical",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
